<?xml version="1.0" encoding="utf-8"?>
<!-- SPDX-License-Identifier: GPL-3.0-only -->
<!-- Defaults must match Prefs.kt. Which keys show in Simple mode: SimpleModeFilter.SIMPLE_KEYS. -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="category_detection"
        app:title="@string/pref_category_detection">

        <ListPreference
            app:defaultValue="accessibility"
            app:entries="@array/detection_method_entries"
            app:entryValues="@array/detection_method_values"
            app:iconSpaceReserved="false"
            app:key="detection_method"
            app:title="@string/pref_detection_method"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="ignore_launcher"
            app:summary="@string/pref_ignore_launcher_summary"
            app:title="@string/pref_ignore_launcher" />

        <EditTextPreference
            app:defaultValue=""
            app:dialogMessage="@string/pref_ignored_packages_message"
            app:iconSpaceReserved="false"
            app:key="ignored_packages"
            app:title="@string/pref_ignored_packages" />

        <EditTextPreference
            app:defaultValue="300"
            app:dialogMessage="@string/pref_debounce_message"
            app:iconSpaceReserved="false"
            app:key="debounce_ms"
            app:title="@string/pref_debounce" />

        <EditTextPreference
            app:defaultValue="1000"
            app:dialogMessage="@string/pref_poll_interval_message"
            app:iconSpaceReserved="false"
            app:key="poll_interval_ms"
            app:title="@string/pref_poll_interval" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="start_on_boot"
            app:summary="@string/pref_start_on_boot_summary"
            app:title="@string/pref_start_on_boot" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="category_rotation"
        app:title="@string/pref_category_rotation">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="restore_on_leave"
            app:summary="@string/pref_restore_summary"
            app:title="@string/pref_restore" />

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/tile_mechanism_entries"
            app:entryValues="@array/tile_mechanism_values"
            app:iconSpaceReserved="false"
            app:key="tile_mechanism"
            app:title="@string/pref_tile_mechanism"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="accessibility"
            app:entries="@array/overlay_type_entries"
            app:entryValues="@array/overlay_type_values"
            app:iconSpaceReserved="false"
            app:key="overlay_type"
            app:title="@string/pref_overlay_type"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="category_tile"
        app:title="@string/pref_category_tile">

        <ListPreference
            app:defaultValue="apl"
            app:entries="@array/tile_cycle_entries"
            app:entryValues="@array/tile_cycle_values"
            app:iconSpaceReserved="false"
            app:key="tile_cycle"
            app:title="@string/pref_tile_cycle"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="quick_actions_notification"
            app:summary="@string/pref_quick_actions_summary"
            app:title="@string/pref_quick_actions" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="category_rules"
        app:title="@string/pref_category_rules">

        <Preference
            app:iconSpaceReserved="false"
            app:key="export_rules"
            app:summary="@string/pref_export_summary"
            app:title="@string/pref_export" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="import_rules"
            app:summary="@string/pref_import_summary"
            app:title="@string/pref_import" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="recent_log"
            app:summary="@string/pref_recent_log_summary"
            app:title="@string/pref_recent_log" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="category_about"
        app:title="@string/pref_category_about">

        <Preference
            app:iconSpaceReserved="false"
            app:key="about"
            app:title="@string/pref_about" />
    </PreferenceCategory>
</PreferenceScreen>
